TabStrip active tab should not have a visible bottom border when scrolling is not used. Fixes telerik/kendo-ui-core#895

--- a/styles/web/common/tabstrip.less
+++ b/styles/web/common/tabstrip.less
@@ -8,9 +8,13 @@
     position: relative;
 }
 
-.k-tabstrip-scrollable .k-tabstrip-items
+.k-tabstrip-items
 {
     padding: 0.3em 0.3em 0;
+}
+
+.k-tabstrip-scrollable .k-tabstrip-items
+{
     white-space: nowrap;
     overflow: hidden;
 }
